--- a/_posts/2014-05-25-news-du-25-05.md
+++ b/_posts/2014-05-25-news-du-25-05.md
@@ -5,16 +5,16 @@ class: post
 
 title: News du 25-05
 
-tweeter: true
+tweet: true
 ---
 
-Demain je vais passer ce [site](//tmcharly.github.io) en version [Jekyll](//jekyllrb.com/).   
+Demain je vais passer ce [site](//tmcharly.github.io) en version [Jekyll](//jekyllrb.com/).
 
-Cette semaine j'ai fait :   
-[Greeting Birth](//cedced19.github.io/demo/greeting-birth/) une page pour ma petite cousine.  
-[Mother's day](//cedced19.github.io/demo/mothers-day/) une page pour toutes les mères du monde.  
-Et modifier le [Countdown](//cedced19.github.io/demo/countdown-page/).   
+Cette semaine j'ai fait :
+[Greeting Birth](//cedced19.github.io/demo/greeting-birth/) une page pour ma petite cousine.
+[Mother's day](//cedced19.github.io/demo/mothers-day/) une page pour toutes les mères du monde.
+Et modifier le [Countdown](//cedced19.github.io/demo/countdown-page/).
 
-[Jekyll](//jekyllrb.com/) est vraiment génial !   
+[Jekyll](//jekyllrb.com/) est vraiment génial !
 
-Bonne fête des mères et bonne soirée !  
+Bonne fête des mères et bonne soirée !
