Adding img option , extract css and include js.

--- a/_posts/2014-06-30-chatc-web.md
+++ b/_posts/2014-06-30-chatc-web.md
@@ -4,6 +4,8 @@ layout: default
 class: post
 
 title: ChatC-Web
+
+img: true
 ---
 
 La semaine dernière j'ai créé [ChatC-Web](https://github.com/cedced19/ChatC-Web) ainsi que [son générateur yeoman](https://www.npmjs.org/package/generator-chat).
