--- a/_posts/2014-05-25-news-du-25-05.md
+++ b/_posts/2014-05-25-news-du-25-05.md
@@ -4,6 +4,8 @@ layout: default
 class: post
 
 title: News du 25-05
+
+img: false
 ---
 
 Demain je vais passer ce [site](//tmcharly.github.io) en version [Jekyll](//jekyllrb.com/).
