Set language to english

--- a/_posts/2014-06-30-chatc-web.md
+++ b/_posts/2014-06-30-chatc-web.md
@@ -8,15 +8,15 @@ title: ChatC-Web
 img: true
 ---
 
-La semaine dernière j'ai créé [ChatC-Web](https://github.com/cedced19/ChatC-Web) ainsi que [son générateur yeoman](https://www.npmjs.org/package/generator-chat).
+Last week I created [ChatC-Web](https://github.com/cedced19/ChatC-Web) and [his yeoman generator](https://www.npmjs.org/package/generator-chat).
 
-Le générateur yeoman permet de:
+The yeoman generator allows you to:
 
-* selectionner une langue et un thème
-* créer un chat rapidement
-* modifier l'ip et le port automatiquement
+* select a language and theme
+* create a quick chat
+* change the ip and port automatically
 
 ![demo](https://raw.githubusercontent.com/cedced19/ChatC-Web/master/demo.png)
 
 
-Bonne journée !
+Have a nice day!
