--- a/_posts/2014-05-25-news-du-25-05.md
+++ b/_posts/2014-05-25-news-du-25-05.md
@@ -8,13 +8,13 @@ title: News du 25-05
 img: false
 ---
 
-Demain je vais passer ce [site](//tmcharly.github.io) en version [Jekyll](//jekyllrb.com/).
+Tomorrow I will spend this [site](//tmcharly.github.io) in version [Jekyll](http://jekyllrb.com/).
 
 Cette semaine j'ai fait :
-[Greeting Birth](//cedced19.github.io/demo/greeting-birth/) une page pour ma petite cousine.
-[Mother's day](//cedced19.github.io/demo/mothers-day/) une page pour toutes les mères du monde.
-Et modifier le [Countdown](//cedced19.github.io/demo/countdown-page/).
+[Greeting Birth](//cedced19.github.io/demo/greeting-birth/) a page for my little cousin.
+[Mother's day](//cedced19.github.io/demo/mothers-day/) a page for all mothers in the world.
+And modify the [Countdown](//cedced19.github.io/demo/countdown-page/).
 
-[Jekyll](//jekyllrb.com/) est vraiment génial !
+[Jekyll](//jekyllrb.com/) is really great !
 
-Bonne fête des mères et bonne soirée !
+Happy Mother's Day and good evening!
