--- a/_posts/2019-07-31-new-to-esp8266.md
+++ b/_posts/2019-07-31-new-to-esp8266.md
@@ -16,7 +16,7 @@ This chip integrates on different cards to make it more convenient to connect.
 
 The simplest and most convenient are the nodemcu cards  [https://amzn.to/2MmnVJW](https://amzn.to/2MmnVJW) (on AliExpress it's cheaper).
 
-<img src="/assets/images/nodemcu.jpg" alt="Nodecmu" width="60%">
+![Nodecmu](/assets/images/nodemcu.jpg)
 
 It is necessary to be careful: when programming on Arduino pin 1 corresponds to GPIO1 while here the numbers change: when a cable is connected to D1 then in the code it is necessary to program 5 (see diagram above). 
 
