--- a/_posts/fr/2019-07-31-new-to-esp8266.md
+++ b/_posts/fr/2019-07-31-new-to-esp8266.md
@@ -16,7 +16,7 @@ Cette puce s'intègre ensuite sur différentes cartes pour qu'elle soit plus pra
 
 Le plus simple et plus pratique sont les cartes nodemcu  [https://amzn.to/2MmnVJW](https://amzn.to/2MmnVJW) (sur AliExpress c'est moins cher).
 
-<img src="/assets/images/nodemcu.jpg" alt="Nodemcu" width="60%">
+![Nodecmu](/assets/images/nodemcu.jpg)
 
 Il faut faire attention: quand on programme sur Arduino la pin 1 correspond à la GPIO1 alors qu'ici les numéros changent: quand un cable est branché sur D1 alors dans le code il faut programmer 5 (cf schéma au dessus). 
 
