--- a/_posts/fr/2020-12-31-review-2020.md
+++ b/_posts/fr/2020-12-31-review-2020.md
@@ -2,7 +2,7 @@
 layout: post
 title:  Rétrospective de mon année 2020
 date:   2020-12-31 0s8:45:40 +0200
-categories: review 2020
+categories: review
 lang: fr
 ---
 
@@ -35,3 +35,5 @@ En décembre, j’ai rejoint le conseil de développement du pays de Sarrebourg 
 Les derniers jours de l’année, avec le déconfinement, ont encore été riches en rencontre, de nouvelles aventures s’offrent à moi.
 
 Je vous souhaite une bonne année 2021. En espérant qu’on ne m’empêche pas de travailler à nouveau.
+
+![Geisfels](/assets/images/2020.jpg)
