--- a/_posts/2020-12-31-review-2020.md
+++ b/_posts/2020-12-31-review-2020.md
@@ -2,7 +2,7 @@
 layout: post
 title:  My year in review 2020
 date:   2020-12-31 08:45:40 +0200
-categories: review 2020
+categories: review
 lang: en
 ---
 
@@ -34,4 +34,4 @@ The last days of the year were again rich in encounters, new adventures are offe
 
 I wish you a happy new year 2021. I hope that I am not prevented from working again.
 
-
+![Geisfels](/assets/images/2020.jpg)
