--- a/_posts/2020-12-31-review-2020.md
+++ b/_posts/2020-12-31-review-2020.md
@@ -17,14 +17,14 @@ I must also not forget the success of our application to deconfinement because o
 
 The most exotic this year was the discovery of Luxembourg or a 3h horse ride at the end of August.
 
-In July, I did two interviews during which I met Jacky from the “Club Vosgiens de Dabo”: [France 3](https://www.youtube.com/watch?v=aJLlbs4fux0), [Mirabelle TV](https://www.youtube.com/watch?v=aPa-TcsNXr0)
+In July, I did two interviews during which I met Jacky from the “Club Vosgiens de Dabo”: [France 3](https://www.youtube.com/watch?v=aJLlbs4fux0), [Mirabelle TV](https://www.youtube.com/watch?v=aPa-TcsNXr0)  
 I also gave a hand to the “Club Vosgiens de Dabo” in August. 
 
 On August 15th, I got the results of my exams, I was admitted to the Ecole Centrale de Lille. On this occasion, I want to thank those who supported me during these two years of preparation which presented a lot of work and investment.
 
 On August 7th, I guided a hike with young children aged 10-12 years with animators from the “Réseau Animation Jeunesse du Pays de Saverne”. It was really nice and gives hope.
 
-In September, I joined the Ecole Centrale de Lille. I saw beautiful things there, I met beautiful people during the two months I was there before being isolated again to my home in Phalsbourg. Among them are my godmother (in engineering schools an inter-promotion sponsorship system is often set up by the students) and her friends.
+In September, I joined the Ecole Centrale de Lille. I saw beautiful things there, I met beautiful people during the two months I was there before being isolated again to my home in Phalsbourg. Among them are my godmother (in engineering schools an inter-promotion mentoring system is often set up by the students) and her friends.
 
 In October, after a visit at [Est FM](https://www.estfm.fr/podcasts/l-association-decouverto-sur-est-fm-1189) with Découverto, I met Théo from Pfalzweyer who showed us the old firing range, which is very little known. 
 
