--- a/_posts/2020-12-31-review-2020.md
+++ b/_posts/2020-12-31-review-2020.md
@@ -6,7 +6,7 @@ categories: review
 lang: en
 ---
 
-The first months of the year were rather peaceful. In fact, I prepared the competitive exams for the Grandes Ecoles d'Ingénieurs which finally took place because of the epidemic at the end of June. 
+The first months of the year were quite peaceful. In fact, I prepared the competitive exams for the Grandes Ecoles d'Ingénieurs which finally took place because of the epidemic at the end of June. 
 I remember making a lot of progress in Maths and Physics in March-April at my home in Phalsbourg.
 
 I will almost forget that I took part in the municipal election of my town Phalsbourg. Even if my list came second out of five, I still have good memories of it. This experience gave me a better understanding of how politics works. I've been using it ever since.
@@ -15,7 +15,7 @@ From May to August, as usual, I went back to the paths, by bike alone or accompa
 
 I must also not forget the success of our application to deconfinement because of some articles in the DNA (*Dernières Nouvelles d’Alsace*) and the desire of nature because of the confinement.
 
-The most exotic this year was the discovery of Luxembourg or a 3h horse ride at the end of August.
+The most exotic this year was the discovery of Luxembourg or a 3 hours horse ride at the end of August.
 
 In July, I did two interviews during which I met Jacky from the “Club Vosgiens de Dabo”: [France 3](https://www.youtube.com/watch?v=aJLlbs4fux0), [Mirabelle TV](https://www.youtube.com/watch?v=aPa-TcsNXr0)  
 I also gave a hand to the “Club Vosgiens de Dabo” in August. 
