--- a/_posts/fr/2020-12-31-review-2020.md
+++ b/_posts/fr/2020-12-31-review-2020.md
@@ -15,7 +15,7 @@ De mai à aout, j’ai comme d’habitude repris le chemin des sentiers, à vél
 
 Je ne dois aussi pas oublier le succès de notre application au déconfinement du fait de quelques articles dans les DNA et de l’envie de nature du fait du confinement.
 
-Le plus exotique cette année a été la découverte du Luxembourg ou encore une randonnée à cheval de 3h fin aout.
+Le plus exotique cette année a été la découverte du Luxembourg ou encore une randonnée à cheval de 3 heures fin aout.
 
 En juillet, j’ai réalisé deux interviews à l’occasion desquelles j’ai rencontré Jacky du Club Vosgiens de Dabo : [France 3](https://www.youtube.com/watch?v=aJLlbs4fux0), [Mirabelle TV](https://www.youtube.com/watch?v=aPa-TcsNXr0)  
 J’ai d’ailleurs donné un coup de main au Club Vosgiens de Dabo en aout. 
